<resources>
    <string name="app_name">used-goods-transaction</string>
    <string name="homeString">홈</string>
    <string name="chatString">채팅</string>
    <string name="myPageString">나의 정보</string>
    <string name="signUpBtn">회원가입</string>
    <string name="longinBtn">로그인</string>

    <string name="itemRegistration">물품 등록</string>
    <string name="itemTitleString">글 제목</string>
    <string name="priceString">가격</string>
    <string name="imageRegistration">이미지 등록하기</string>
    <string name="Registration">등록하기</string>


    <string name="chatting_list">채팅방 리스트</string>

</resources>